# MOM6-interface

./: .gitmodules  CMakeLists.txt
cmake/: Intel.cmake
